Fix css bug where the section numbers could get clipped off the left side of the viewport. The solution is not entirely satisfactory but at least it doesn't involve a div.everything.

--- a/es6-draft.css
+++ b/es6-draft.css
@@ -1,4 +1,8 @@
 /* Basics */
+html {
+    padding-left: 6.8em;
+    padding-right: 1em;
+}
 body {
     margin: 0 auto;
     max-width: 800px;
